[gd_scene load_steps=6 format=3 uid="uid://df76wrk6flha3"]

[ext_resource type="Script" path="res://scripts/entities/security_process.gd" id="1_tcupy"]
[ext_resource type="Texture2D" uid="uid://dxddl5lmri8tm" path="res://assets/art/bot_normal_v1.png" id="2_dwlil"]
[ext_resource type="Texture2D" uid="uid://b2c65iovqau0u" path="res://assets/art/bot_infected_v1.png" id="3_qt1uq"]
[ext_resource type="Texture2D" uid="uid://bmm26i8i0wu2m" path="res://assets/art/move_symbol_v1.png" id="4_b26lq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owbde"]
size = Vector2(54, 53)

[node name="SecurityProcess" type="CharacterBody2D"]
script = ExtResource("1_tcupy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_owbde")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(46, 0)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]

[node name="Polygon2D" type="Polygon2D" parent="DetectionArea"]
color = Color(0.207843, 0.760784, 0.0392157, 0.298039)
polygon = PackedVector2Array(0, 0, 155, -46, 155, 46)

[node name="Sprites" type="Node2D" parent="."]

[node name="Clean" type="Sprite2D" parent="Sprites"]
texture = ExtResource("2_dwlil")

[node name="Infected" type="Sprite2D" parent="Sprites"]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("3_qt1uq")

[node name="Symbol" type="Sprite2D" parent="Sprites"]
texture = ExtResource("4_b26lq")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
